[gd_scene load_steps=5 format=3 uid="uid://cdbghn6dwvi5k"]

[ext_resource type="Script" path="res://Inventory/Inv_UI.gd" id="1_sf7qn"]
[ext_resource type="Texture2D" uid="uid://c55e3wpq8vvh3" path="res://Inventory/inventory_sprites/hotbar.png" id="2_oxe81"]
[ext_resource type="PackedScene" uid="uid://cqtkm8ssdtoea" path="res://Inventory/inv_ui_slot.tscn" id="3_7ux1y"]
[ext_resource type="FontFile" uid="uid://c6plncwpd8gxm" path="res://assets/fonts/PressStart2P-Regular.ttf" id="4_c0fny"]

[node name="Inv_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 2.0
offset_right = 27.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sf7qn")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 91.0
offset_bottom = 11.0
texture = ExtResource("2_oxe81")
region_rect = Rect2(0, 0, 182, 22)

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 9

[node name="inv_UI_slot1" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="inv_UI_slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="inv_UI_slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="inv_UI_slot4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="inv_UI_slot5" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="inv_UI_slot6" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="inv_UI_slot7" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="inv_UI_slot8" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="inv_UI_slot9" parent="NinePatchRect/GridContainer" instance=ExtResource("3_7ux1y")]
layout_mode = 2

[node name="Nome" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = -6.0
offset_right = 326.0
offset_bottom = 17.0
scale = Vector2(0.15, 0.15)
theme_override_colors/font_color = Color(0.992157, 0.945098, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(1, 0.54902, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_c0fny")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="Description" type="Label" parent="Nome"]
layout_mode = 0
offset_left = -273.0
offset_top = 27.0
offset_right = 587.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_c0fny")
horizontal_alignment = 1
